--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
-    implementation project(':kiwi')
+    expectedBy project(':kiwi')
 }
